# core

./: .gitignore  LICENSE  README.md  main.js  main.ts  package.json  preload.js  preload.ts  renderer.d.ts  tsconfig.json  update_versions.py
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build.yml
src/: main.js  package.json
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/ui/: .gitignore  index.html  package.json  webpack.config.js
src/ui/src/: index.js
ui/: babel.config.json  index.html  vite.config.js  webpack.config.js
ui/src/: BaseComponentProps.ts  DarkMode.scss  Error.scss  ErrorBoundary.tsx  index.tsx  main.scss
ui/src/components/: Dialog.scss  Dialog.tsx  Separator.js  Separator.tsx  Tabs.scss  Tabs.tsx
ui/src/components/TabbedSidebar/: TabbedSidebar.scss  index.tsx
ui/src/libs/: configFiles.tsx  getAsset.ts  internal.ts  newMainLuaFile.ts  pocketbase.ts  project.js  project.tsx  projectBinary.ts  tauriFS.ts
ui/src/libs/elements/: ButtonElement.tsx  ImageElement.tsx  MusicElement.tsx  TextElement.tsx  builtin.tsx  list.ts
ui/src/libs/github/: index.tsx
ui/src/libs/logic/: index.ts
ui/src/libs/plugin/: index.ts
ui/src/libs/settings/: defaultSettings.ts  index.ts  settingsType.ts
ui/src/libs/theme/: example.json  index.ts
ui/src/libs/utils/: addSpaceAtCapitals.ts  capitalizeFirstLetter.ts
ui/src/plugins/test/: index.js  proton.config.js
ui/src/plugins/test2/: index.js  package.json  proton.config.js
ui/src/screens/editor/: Console.tsx  Editor.js  (+12 more)
(+24 files in other folders)
