[package]
name = "proton-designer"
version = "0.3.2"
description = "Proton Designer is an application builder."
authors = [ "TechStudent10",]
license = "MIT"
repository = "https://github.com/ProtonDesigner/core"
default-run = "proton-designer"
edition = "2021"
rust-version = "1.59"

[dependencies]
serde_json = "1.0"

[features]
default = [ "custom-protocol",]
custom-protocol = [ "tauri/custom-protocol",]

[dependencies.serde]
version = "1.0"
features = [ "derive",]

[dependencies.tauri]
version = "1.2.4"
features = [ "dialog-save", "fs-create-dir", "fs-exists", "fs-remove-file", "fs-rename-file", "fs-write-file",]

[build-dependencies.tauri-build]
version = "1.2.1"
features = []
